2009-03-24  Miles Bader  <miles@gnu.org>

	* smiley.el (smiley-regexp-alist): Don't delete the semicolon before
	the blinking smiley.

2009-03-24  Simon Josefsson  <simon@josefsson.org>

	* smiley.el (smiley-regexp-alist): Disallow ;;) from being treated as a
	blink smiley.

2010-08-29  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-start.el (gnus-dribble-read-file): Ensure that the directory
	where the dribbel file lives exists.

	* message.el (message-send-mail-partially-limit): Change the default to
	nil, since most people don't want this.

	* mm-url.el (mm-url-decode-entities): Also decode entities like
	&#x3212.

2009-07-16  Kevin Ryde  <user42@zip.com.au>  (tiny change)

	* gnus-sum.el (gnus-summary-idna-message):
	* nnrss.el (nnrss-normalize-date, nnrss-discover-feed):
	Hyperlink urls in docstrings with URL `...'.

2010-08-29  Adam Sjøgren  <asjo@koldfront.dk>

	* gnus-html.el (gnus-html-put-image): Use XEmacs-compatible image
	functions.

2010-08-29  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-article-add-button): Take an optional parameter to
	say what the mouseover text should be.

	* gnus-html.el (gnus-html-prefetch-images): Use the summary-local
	version of the mm-w3m-safe-url-regexp variable to only download images
	in the groups where we want that to happen.

	* gnus-sum.el (gnus-summary-stop-at-end-of-message): New variable.

	* gnus-art.el (gnus-article-beginning-of-window): Make into defun for
	easier debugging.
	(gnus-article-beginning-of-window): Add kludge to allow spacing past
	big pictures in the article buffer.

	* mm-decode.el (mm-text-html-renderer): Default the html renderer to
	gnus-article-html.
	(mm-text-html-renderer): gnus-article-html needs curl in addition to
	w3m.

	* gnus-html.el: Start a new super-simple HTML renderer based on w3m.

2010-08-28  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus.el (gnus-valid-select-methods): Remove reference to nngoogle,
	which doesn't exist.
